--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -178,8 +178,8 @@
 
         function displayTable(containerId, rows) {
             const boldText = [
-                'Group Stage Predictions', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
-                'Knockout Stage Predictions', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
+                'Group Stage', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
+                'Knockout Stage', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
                 'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament'
             ];
 
