--- a/download_pdf.html
+++ b/download_pdf.html
@@ -95,9 +95,9 @@
                 pdf.addPage();
 
                 const boldText = [
-                    'Group Stage Predictions', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
-                    'Knockout Stage Predictions', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
-                    'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament', 'Additional Predictions'
+                    'Group Stage', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
+                    'Knockout Stage', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
+                    'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament', 'Top Players'
                 ];
 
                 for (let i = 0; i < participants.participants.length; i++) {
