--- a/participants_comparison.html
+++ b/participants_comparison.html
@@ -194,8 +194,8 @@
                                 const flagImg = flags[cellContent] ? `<img src="${flags[cellContent]}" class="flag"> ` : '';
                                 const abbreviation = abbreviations[cellContent] ? abbreviations[cellContent] : cellContent;
                                 const boldText = [
-                                    'Group Stage Predictions', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
-                                    'Knockout Stage Predictions', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
+                                    'Group Stage', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
+                                    'Knockout Stage', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
                                     'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament'
                                 ];
                                 const cellClass = boldText.includes(cellContent) ? 'bold-text' : '';
