--- a/update_scores.html
+++ b/update_scores.html
@@ -438,7 +438,7 @@
                     participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},,${score}\n`;
 
                     participantCSV += "\n"
-                    participantCSV += "Additional Predictions\n"
+                    participantCSV += "Top Players\n"
 
                     // Process lines 75 to 77
                     for (let i = 74; i < 77; i++) {
