--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -17,6 +17,7 @@
         table {
             width: 75%;
             border-collapse: collapse;
+            border: none;
             margin-bottom: 10px;
             font-size: 10px; /* Adjust the table font size */
         }
@@ -45,6 +46,7 @@
         }
 
         .table-container {
+            border: none;
             width: 45%;
         }
 
