--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -182,7 +182,7 @@
             const boldText = [
                 'Group Stage', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
                 'Knockout Stage', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
-                'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament'
+                'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament', 'Top Players'
             ];
 
             let tableHTML = '<table>';
