--- a/index.html
+++ b/index.html
@@ -21,16 +21,12 @@
             justify-content: center;
         }
 
-        table,
-        th,
-        td {
-            border: 1px solid black;
-        }
-
         th,
         td {
             padding: 8px;
             text-align: left;
+            border: none;
+            /* Removed the border */
         }
 
         th {
