--- a/participants_comparison.html
+++ b/participants_comparison.html
@@ -196,7 +196,7 @@
                                 const boldText = [
                                     'Group Stage', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
                                     'Knockout Stage', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
-                                    'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament'
+                                    'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament', 'Top Players'
                                 ];
                                 const cellClass = boldText.includes(cellContent) ? 'bold-text' : '';
                                 tableHTML += `<td class="${cellClass}">${flagImg}${abbreviation}</td>`;
