--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -24,6 +24,7 @@
 
         th,
         td {
+            border: none; /* Ensure table cells have no borders */
             padding: 5px;
             text-align: left;
         }
