--- a/download_pdf.html
+++ b/download_pdf.html
@@ -44,11 +44,10 @@
     <div class="logo-container">
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
-    <div class="button-container">
-        <button onclick="downloadPDF()">Download All Participants Predictions</button>
-    </div>
 
     <script>
+        document.addEventListener('DOMContentLoaded', downloadPDF);
+
         async function downloadPDF() {
             const { jsPDF } = window.jspdf;
             const pdf = new jsPDF();
