--- a/index2.html
+++ b/index2.html
@@ -81,8 +81,9 @@
 
             for (let d = startDate; d <= endDate; d.setDate(d.getDate() + 1)) {
                 const dateOption = document.createElement('option');
-                dateOption.value = d.toISOString().split('T')[0];
-                dateOption.text = d.toISOString().split('T')[0];
+                const dateString = d.toLocaleString('default', { month: 'long', day: 'numeric' });
+                dateOption.value = dateString;
+                dateOption.text = dateString;
                 dateSelector.add(dateOption);
             }
         });
