--- a/index2.html
+++ b/index2.html
@@ -19,6 +19,28 @@
             margin-bottom: 20px;
         }
 
+        .menu-container {
+            display: flex;
+            justify-content: flex-end;
+            margin-bottom: 20px;
+        }
+
+        .menu {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .menu li {
+            display: inline;
+            margin-left: 20px;
+        }
+
+        .menu li a {
+            color: #7c7a7a;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
         .center {
             text-align: center;
             margin-top: 20px;
@@ -52,6 +74,15 @@
 </head>
 
 <body>
+    <div class="menu-container">
+        <ul class="menu">
+            <li><a href="./actual_results_comparison.html">Euro2024 Results</a></li>
+            <li><a href="./group_stage_result.html">Game by Game Points</a></li>
+            <li><a href="./participants_comparison.html">Player vs Player</a></li>
+            <li><a href="./download_pdf.html">Download All Predictions</a></li>
+            <li><a href="./index.html">Prediction Form</a></li>
+        </ul>
+    </div>
     <div class="logo-container">
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
