--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generate Scores CSV</title>
+    <title>Euro2024 - Rankings</title>
     <style>
         body {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -95,8 +95,8 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
-            const startDate = new Date('2024-06-14');
-            const endDate = new Date('2024-07-14');
+            const startDate = new Date('2024-06-15');
+            const endDate = new Date('2024-07-15');
             const dateSelector = document.getElementById('dateSelector');
 
             for (let d = startDate; d <= endDate; d.setDate(d.getDate() + 1)) {
