--- a/rankings.html
+++ b/rankings.html
@@ -80,7 +80,7 @@
             <li><a href="./group_stage_result.html">Game by Game Points</a></li>
             <li><a href="./participants_comparison.html">Player vs Player</a></li>
             <li><a href="./download_pdf.html">Download All Predictions</a></li>
-            <li><a href="./index.html">Prediction Form</a></li>
+            <li><a href="./prediction_form.html">Prediction Form</a></li>
         </ul>
     </div>
     <div class="logo-container">
