--- a/rankings.html
+++ b/rankings.html
@@ -81,6 +81,7 @@
             <li><a href="./participants_comparison.html">Player vs Player</a></li>
             <li><a href="./download_pdf.html">Download All Predictions</a></li>
             <li><a href="./prediction_form.html">Prediction Form</a></li>
+            <li><a href="./rules.html">Rules</a></li>
         </ul>
     </div>
     <div class="logo-container">
