--- a/rules.html
+++ b/rules.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rules</title>
+    <title>Point Systems</title>
     <style>
         body {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -43,7 +43,7 @@
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
     <div class="content">
-        <h1>Rules</h1>
+        <h1>Point Systems</h1>
         <ul>
             <li>
                 <strong>Group Stage Predictions:</strong>
