--- a/rules.html
+++ b/rules.html
@@ -48,7 +48,7 @@
             <li>
                 <strong>Group Stage Predictions:</strong>
                 <ul>
-                    <li><strong>10 points:</strong> If both the predicted and actual scores for both teams match exactly.</li>
+                    <li><strong>10 points:</strong> If the exact scoreline is predicted</li>
                     <li><strong>8 points:</strong> If the predicted goal difference and match outcome (win, loss, draw) match the actual result, even if the exact scores do not.</li>
                     <li><strong>5 points:</strong> If the predicted result is a draw, and the actual result is also a draw, regardless of the exact score.</li>
                     <li><strong>5 points:</strong> If the predicted match outcome (win or loss) is correct, but the exact scores or goal difference are incorrect.</li>
@@ -58,10 +58,10 @@
             <li>
                 <strong>Knockout Stage Predictions:</strong>
                 <ul>
-                    <li><strong>Round of 16:</strong> 20 points for correctly predicting the winner of a match.</li>
-                    <li><strong>Quarterfinals:</strong> 40 points for correctly predicting the winner of a match.</li>
-                    <li><strong>Semifinals:</strong> 60 points for correctly predicting the winner of a match.</li>
-                    <li><strong>Final:</strong> 80 points for correctly predicting the winner of the final match.</li>
+                    <li><strong>Round of 16:</strong> 20 points for correctly predicting the winner of a match. (Qualified teams to QF)</li>
+                    <li><strong>Quarterfinals:</strong> 40 points for correctly predicting the winner of a match. (Qualified teams to SF)</li>
+                    <li><strong>Semifinals:</strong> 60 points for correctly predicting the winner of a match. (Qualified teams to F</li>
+                    <li><strong>Final:</strong> 80 points for correctly predicting the winner of the final match. (Champion)</li>
                 </ul>
             </li>
             <li>
