--- a/rules.html
+++ b/rules.html
@@ -67,7 +67,8 @@
             <li>
                 <strong>Top Players Predictions:</strong>
                 <ul>
-                    <li><strong>80 points:</strong> for correctly predicting a top player in the tournament.</li>
+                    <li><strong>80 points:</strong> for correctly predicting the Top Goal Scorer.</li>
+                    <li><strong>80 points:</strong> for correctly predicting the Top Goal GoalKeeper.</li>
                 </ul>
             </li>
         </ul>
