--- a/rules.html
+++ b/rules.html
@@ -60,7 +60,7 @@
                 <ul>
                     <li><strong>Round of 16:</strong> 20 points for correctly predicting the winner of a match. (Qualified teams to QF)</li>
                     <li><strong>Quarterfinals:</strong> 40 points for correctly predicting the winner of a match. (Qualified teams to SF)</li>
-                    <li><strong>Semifinals:</strong> 60 points for correctly predicting the winner of a match. (Qualified teams to F</li>
+                    <li><strong>Semifinals:</strong> 60 points for correctly predicting the winner of a match. (Qualified teams to F)</li>
                     <li><strong>Final:</strong> 80 points for correctly predicting the winner of the final match. (Champion)</li>
                 </ul>
             </li>
