--- a/rules.html
+++ b/rules.html
@@ -34,6 +34,23 @@
 
         ul {
             color: #fff;
+            list-style: none;
+            padding: 0;
+        }
+
+        .points-list li {
+            display: flex;
+            margin-bottom: 10px; /* Add margin between list items */
+        }
+
+        .points-list li strong:first-child {
+            flex: 0 0 100px; /* Adjust width as needed */
+            text-align: right;
+            margin-right: 10px;
+        }
+
+        .section {
+            margin-bottom: 20px; /* Add margin between sections */
         }
     </style>
 </head>
@@ -44,27 +61,27 @@
     </div>
     <div class="content">
         <h1>Point Systems</h1>
-        <ul>
-            <li>
+        <ul class="points-list">
+            <li class="section">
                 <strong>Group Stage Predictions:</strong>
                 <ul>
                     <li><strong>10 points:</strong> If the exact scoreline is predicted</li>
-                    <li><strong>8  points:</strong> If the predicted goal difference and match outcome (win, loss, draw) match the actual result, even if the exact scores do not.</li>
-                    <li><strong>5  points:</strong> If the predicted result is a draw, and the actual result is also a draw, regardless of the exact score.</li>
-                    <li><strong>5  points:</strong> If the predicted match outcome (win or loss) is correct, but the exact scores or goal difference are incorrect.</li>
-                    <li><strong>0  points:</strong> If none of the above conditions are met.</li>
+                    <li><strong>8 points:</strong> If the predicted goal difference and match outcome (win, loss, draw) match the actual result, even if the exact scores do not.</li>
+                    <li><strong>5 points:</strong> If the predicted result is a draw, and the actual result is also a draw, regardless of the exact score.</li>
+                    <li><strong>5 points:</strong> If the predicted match outcome (win or loss) is correct, but the exact scores or goal difference are incorrect.</li>
+                    <li><strong>0 points:</strong> If none of the above conditions are met.</li>
                 </ul>
             </li>
-            <li>
+            <li class="section">
                 <strong>Knockout Stage Predictions:</strong>
                 <ul>
                     <li><strong>R16:</strong> 20 points for correctly predicting the winner of a match. (Qualified teams to QF)</li>
-                    <li><strong>QF :</strong> 40 points for correctly predicting the winner of a match. (Qualified teams to SF)</li>
-                    <li><strong>SF :</strong> 60 points for correctly predicting the winner of a match. (Qualified teams to F)</li>
-                    <li><strong>F  :</strong> 80 points for correctly predicting the winner of the final match. (Champion)</li>
+                    <li><strong>QF:</strong> 40 points for correctly predicting the winner of a match. (Qualified teams to SF)</li>
+                    <li><strong>SF:</strong> 60 points for correctly predicting the winner of a match. (Qualified teams to F)</li>
+                    <li><strong>F:</strong> 80 points for correctly predicting the winner of the final match. (Champion)</li>
                 </ul>
             </li>
-            <li>
+            <li class="section">
                 <strong>Top Players Predictions:</strong>
                 <ul>
                     <li><strong>80 points:</strong> for correctly predicting the Top Goal Scorer.</li>
