--- a/rules.html
+++ b/rules.html
@@ -66,7 +66,7 @@
                 <strong>Group Stage Predictions:</strong>
                 <ul>
                     <li><strong>10 points:</strong> If the exact scoreline is predicted</li>
-                    <li><strong>8 points:</strong> If the predicted goal difference and match outcome (win, loss, draw) match the actual result, even if the exact scores do not.</li>
+                    <li><strong>8 points:</strong> If the predicted goal difference and match outcome (only win or loss) match the actual result, even if the exact scores do not.</li>
                     <li><strong>5 points:</strong> If the predicted result is a draw, and the actual result is also a draw, regardless of the exact score.</li>
                     <li><strong>5 points:</strong> If the predicted match outcome (win or loss) is correct, but the exact scores or goal difference are incorrect.</li>
                     <li><strong>0 points:</strong> If none of the above conditions are met.</li>
